test/compile-fail/resolution/pub/field-beyond-struct/top.rhdl
mod a {
    struct x {}
    struct b(pub x);
    pub struct e(pub x);
    mod f {
        struct g(pub super::x);
        pub struct h(pub super::x);
    }
    struct i(pub(in super) x);
    enum j { a(pub x), b { pub inner: x } }
    pub enum k { a(pub x), b { pub inner: x } }
}
